# Recall

./: .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
app/data/: storage.js
app/export/: annotatedPdf.js  bundles.js  markdown.js
app/intelligence/: aiAssistant.js  insights.js
python-learning-path/: .gitignore  Makefile  README.md  pyproject.toml
python-learning-path/capstone/: README.md
python-learning-path/roadmap/: 01_beginner.md  02_junior.md  03_middle.md  04_pro.md
python-learning-path/src/python_learning/: __init__.py  analytics.py  async_jobs.py  cli.py  models.py  service.py  storage.py
python-learning-path/tasks/: 01_beginner.md  02_junior.md  03_middle.md  04_pro.md
python-learning-path/tests/: test_analytics.py  test_async_jobs.py  test_service.py  test_storage.py
scripts/: clean-generated.mjs  dev-electron.mjs  generate-update-manifest.mjs  prune-dist.mjs  ui-snap.mjs
tests/: ai-assistant.test.mjs  annotated-pdf.test.mjs  api.test.ts  app.test.tsx  bundles.test.mjs  components.test.tsx  contracts.test.mjs  debug-trace.test.ts  deep-links.test.ts  diagnostics-center.test.ts  diagnostics-tray.test.ts  format.test.ts  highlight-lib.test.ts  highlights-view.test.tsx  insights-view.test.tsx  insights.test.mjs  ipc-utils.test.ts  knowledge-graph-canvas.test.tsx  library-view.test.tsx  markdown.test.mjs  minimap.test.ts  models.test.mjs  preload.test.ts  reader-utils.test.tsx  status-center.test.ts  storage.test.mjs  store.test.ts  update-checker.test.mjs  vite-config.test.ts
(+45 files in other folders)
